2011-02-10  Alan Modra  <amodra@gmail.com>

	Apply from mainline
	2010-11-20  Richard Sandiford  <rdsandiford@googlemail.com>
	* lib/gas-defs.exp (regexp_diff): Delete.
	(run_dump_test): Remove final "" argument in call to regexp_diff.
	(run_list_test): Likewise.
	(run_list_test_stdin): Likewise.
	* gas/all/gas.exp (test_cond): Likewise.
	* gas/elf/elf.exp (run_elf_list_test): Likewise.
	* gas/m68k/all.exp: Likewise.
	* gas/mep/complex-relocs.exp (regexp_test): Likewise.
	* gas/mt/relocs.exp (regexp_test): Likewise.
	* gas/symver/symver.exp (run_error_test): Likewise.

	2010-11-20  Richard Sandiford  <rdsandiford@googlemail.com>
	* lib/gas-defs.exp (load_common_lib): New function.  Load
	binutils-common.exp.
	(is_elf_format, is_aout_format, is_pecoff_format): Delete.

	2010-11-08  Thomas Schwinge  <thomas@schwinge.name>
	* lib/gas-defs.exp (is_elf_format): Consider for *-*-gnu*, too.
	* gas/elf/elf.exp: Likewise.
	* gas/symver/symver.exp: Likewise.

2011-02-07  Vincent Riviere  <vincent.riviere@freesbee.fr>

	PR gas/3041
	* gas/m68k/p3041pcrel.s, * gas/m68k/p3041pcrel.d: New test.
	* gas/m68k/all.exp: Add "p3041pcrel" and enable p3041 tests for
	all m68k-aout targets.

2011-02-01  Alan Modra  <amodra@gmail.com>

	Backport from mainline
	2010-12-02  Richard Sandiford  <richard.sandiford@linaro.org>
	* gas/i386/ifunc-2.s, gas/i386/ifunc-2.l: New test.
	* gas/i386/ifunc-3.s, gas/i386/ifunc-3.d: Likeise.
	* gas/i386/i386.exp: Run them.

2010-11-15  Richard Sandiford  <rdsandiford@googlemail.com>

	* gas/mips/elf-rel28.s, gas/mips/elf-rel28-n32.d,
	gas/mips/elf-rel28-n64.d: New test.
	* gas/mips/mips.exp: Run it.

2010-11-15  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	PR gas/12198
	* gas/arm/pr12198-1.d: New test.
	* gas/arm/pr12918-1.s: Likewise.
	* gas/arm/pr12198-2.d: Likewise.
	* gas/arm/pr12918-2.s: Likewise.

2010-11-10  Richard Sandiford  <richard.sandiford@linaro.org>

	* gas/arm/plt-1.s, gas/arm/plt-1.d: New test.
