@@ -1,3 +1,9 @@
+2011-02-10  Vincent Rivière  <vincent.riviere@freesbee.fr>
+
+	* gas/m68k/cpu32.d: Set explicit architecture for objdump.
+	* gas/m68k/mcf-coproc.d: Likewise.
+	* gas/m68k/mcf-wdebug.d: Likewise.
+
 2011-02-10  Alan Modra  <amodra@gmail.com>
 
 	Apply from mainline
